# GC-Benchmarks

./: .gitignore  README.md  compile_commands.json  runbench.c
CSharp/: Program.cs
D/: main.d
FSharp/: Program.fs
Go/: go.mod  main.go
Java/: Benchmark.java
OCaml/: OCaml.opam  dune-project
scripts/: args.c  args.h  benchmarks.c  benchmarks.h  sort.c  sort.h  utils.c  utils.h
